Removed index.js and replaced it with app.js.  Also added some functionality between index.html and app.js

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 <html>
-<body>
-Hello World
+  <head>
+    <title>Lou's Todo List</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="app.js"></script>
+  </head>  
+<body ng-app>
+  <div class="todo-container">
+    <h1>Hello World</h1>
+  </div>  
 </body>
 </html>
