fixed a few things with index.html

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
     <script src="app.js"></script>
   </head>  
-<body ng-app>
-  <div class="todo-container">
-    <h1>Hello World</h1>
+<body ng-app="ngTodos">
+  <div class="todo-container" ng-controller="todoController">
+    <h1>Lou's Todo List</h1>
+    <input ng-model="newTodo"/>
+    <button ng-click="addTodo()">Submit</button>
+  <ul>
+    <li ng-repeat="todo in todos track by $index" ng-click="removeTodo()"> {{ todo }} </li>
+  </ul>
   </div>  
 </body>
 </html>
